<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/welcome"
        android:textColor="#282828"
        android:textSize="36sp"
        app:fontFamily="sans-serif-condensed-light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtMission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:paddingLeft="20sp"
        android:paddingRight="20sp"
        android:text="@string/mission"
        android:textSize="24sp"
        app:fontFamily="sans-serif-condensed-light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtWelcome" />

    <TextView
        android:id="@+id/txtHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/hours"
        android:textSize="18sp"
        app:fontFamily="sans-serif-condensed-light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAddress" />

    <TextView
        android:id="@+id/txtAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/address"
        android:textColor="#282828"
        android:textSize="24sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif-condensed-medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMission" />

    <Button
        android:id="@+id/btnViewExhibit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="72sp"
        android:layout_marginTop="96dp"
        android:layout_marginRight="72sp"
        android:background="@color/colorPrimary"
        android:onClick="onClickLaunchExhibits"
        android:paddingTop="20sp"
        android:paddingBottom="20sp"
        android:text="@string/btn_view_exhibits"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHours" />

    <Button
        android:id="@+id/btnLearnMore"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="72sp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="72sp"
        android:background="@drawable/border"
        android:onClick="onClickLearnMore"
        android:paddingTop="20sp"
        android:paddingBottom="20sp"
        android:text="@string/btn_learn_more"
        android:textColor="#BA0C2F"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnViewExhibit" />

</androidx.constraintlayout.widget.ConstraintLayout>