<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30sp"
        android:layout_weight="4"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgA"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/resistance_art"
            android:paddingStart="20sp"
            android:paddingLeft="20sp"
            android:paddingEnd="10sp"
            android:paddingRight="10sp"
            app:srcCompat="@drawable/resistance_art" />

        <ImageView
            android:id="@+id/imgB"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/discontent_art"
            android:paddingStart="10sp"
            android:paddingLeft="10sp"
            android:paddingEnd="20sp"
            android:paddingRight="20sp"
            app:srcCompat="@drawable/discontent_art" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtDesc"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:paddingLeft="20sp"
        android:paddingTop="30sp"
        android:paddingRight="20sp"
        android:paddingBottom="30sp"
        android:text="@string/battling_imagery_desc"
        android:textSize="24sp"
        app:fontFamily="sans-serif-condensed-light" />
</LinearLayout>